<resources>
    <string name="app_name" translatable="false">RedditApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Salvador Nieto</string>
    <string name="nav_header_subtitle" translatable="false">tux1224@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Popular">Popular</string>
    <string name="All">All</string>
    <string name="OriginalContent">Original Content</string>
    <string name="subreddits" translatable="false">Subreddits</string>
    <string name="title_activity_sdasadsadsad">Sign in</string>
    <string name="error_message_displaying_data">No data retrived </string>
    <string name="action_hot">HOT</string>
    <string name="action_new">NEW</string>
    <string name="action_controversial">CONTROVERSIAL</string>
    <string name="action_top">TOP</string>
    <string name="action_rising">RISING</string>
    <string name="videos">Videos</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="desciption">This is a representative description</string>
    <string name="testtext">This a string test</string>


</resources>
