<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_hot"
        android:orderInCategory="100"
        android:title="@string/action_hot"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_controvertial"
        android:orderInCategory="100"
        android:title="@string/action_controversial"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top"
        android:orderInCategory="100"
        android:title="@string/action_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rising"
        android:orderInCategory="100"
        android:title="@string/action_rising"
        app:showAsAction="never" />
</menu>
