<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/redit_icon"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/redit_icon"
            android:title="@string/Popular" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/redit_icon"
            android:title="@string/All" />
        <item
            android:id="@+id/nav_origin_content"
            android:icon="@drawable/redit_icon"
            android:title="@string/OriginalContent" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/redit_icon"
            android:title="@string/videos" />
    </group>

        <group android:id="@+id/subreddit_menu">


        </group>

</menu>
